$Id: History,v 1.17 1999-11-26 18:54:57 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
November 26th, 1999   J. Apostolakis - geomvol-V00-01-01

G4TouchableHistory: Moved GetTranslation and GetRotation from inline file 
    to source file -- as they use static variables in the methods themselves.
        --> cannot be handled by new HP aCC compiler

G4PropagatorInField: Initialised fVerboseLevel in constructor. (omision)
        --> on WinNT 4.0sp4 / VC++ 6.0  it was given value of 1 not 0.

November 10th, 1999   J. Apostolakis - geomvol-01-01-01b

Modified test/GNUmakefile to make it use fully-granular libraries.
New test code in testG4Volumes for Object/Frame Rotation/Translation.

October  29th, 1999   J. Apostolakis - geomvol-01-01-01a

Moved initialisation of static data members of G4PropagatorInField 
  fDefault_Delta_Intersection_Val
  fDefault_Delta_One_Step_Value 
to G4TransportationManager.cc, to ensure correct order initialisation 
of static (class) data members 

G4PropagatorInField warning message about integration inaccuracy 
now printed (for a maximum of 10 times) and in Verbose. 



July     27th, 1999   J. Apostolakis
G4PropagatorInField: