@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4TransportationManager.icc,v 1.1 1999-01-07 16:08:46 gunter Exp $
+// $Id: G4TransportationManager.icc,v 1.2 1999-12-02 13:20:21 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //  
@@ -51,9 +51,4 @@ inline void  G4TransportationManager::SetFieldManager(
 		G4FieldManager*         newFieldManager)
 {
    fFieldManager=      newFieldManager; 
-}
-
-inline G4TransportationManager* G4TransportationManager::GetTransportationManager()
-{
-   return &fTransportationManager;
 }
