@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4TransportationManager.cc,v 1.3 1999-10-29 16:40:31 japost Exp $
+// $Id: G4TransportationManager.cc,v 1.4 1999-12-02 13:20:26 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -30,14 +30,21 @@ const G4double G4PropagatorInField::fDefault_Delta_Intersection_Val= 0.1 * mm;
 const G4double G4PropagatorInField::fDefault_Delta_One_Step_Value = 0.25 * mm;
 
 
-G4TransportationManager  G4TransportationManager::fTransportationManager;
+G4TransportationManager* G4TransportationManager::fTransportationManager=0;
 
 G4TransportationManager::G4TransportationManager() 
 { 
-  fNavigatorForTracking= new G4Navigator() ;
-  fFieldManager=         new G4FieldManager() ;
-  fPropagatorInField=    new G4PropagatorInField( fNavigatorForTracking,
+  if (!fTransportationManager)
+  {
+    fNavigatorForTracking= new G4Navigator() ;
+    fFieldManager=         new G4FieldManager() ;
+    fPropagatorInField=    new G4PropagatorInField( fNavigatorForTracking,
                                                     fFieldManager);
+  }
+  else
+  {
+    G4Exception("Only ONE instance of G4TransportationManager is allowed!");
+  }
 } 
 
 
@@ -46,4 +53,14 @@ G4TransportationManager::~G4TransportationManager()
   delete fNavigatorForTracking; 
   delete fPropagatorInField;
   delete fFieldManager; 
+}
+
+
+G4TransportationManager* G4TransportationManager::GetTransportationManager()
+{
+   static G4TransportationManager theInstance;
+   if (!fTransportationManager)
+     fTransportationManager = &theInstance;
+   
+   return fTransportationManager;
 }
